social media links fixed

--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
                                 <a href="https://batora07.blog/" class="btn-social btn-outline" target="_blank"><i class="fa fa-fw fa-wordpress"></i></a>
                             </li>
                             <li>
-                                <a href="https://twitter.com/Batora07" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
+                                <a href="https://twitter.com/Batora07" class="btn-social btn-outline" target="_blank"><i class="fa fa-fw fa-twitter"></i></a>
                             </li>
                             <li>
                                 <a href="https://www.linkedin.com/in/marcportet" class="btn-social btn-outline" target="_blank"><i class="fa fa-fw fa-linkedin"></i></a>
