New page added for projects

--- a/index.html
+++ b/index.html
@@ -395,37 +395,35 @@
                     <h2>Travaux</h2>
                     <hr class="small">
                     <div class="row">
-                        <div class="col-md-6">
-                            <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">
-                                </a>
-                            </div>
-                        </div>
+                        <ul class="ch-grid">
+                            <li>
+                                <div class="ch-item ch-img-1">
+                                    <div class="ch-info">
+                                        <h3>Projets Unity</h3>
+                                        <p><a href="pages/projects.html" target="_blank">by Marc Portet / Batora07</a></p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="ch-item ch-img-2">
+                                    <div class="ch-info">
+                                        <h3>Projets Unreal</h3>
+                                        <p><a href="pages/projects.html" target="_blank">by Marc Portet / Batora07</a></p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="ch-item ch-img-4">
+                                    <div class="ch-info">
+                                        <h3>Autres Projets</h3>
+                                        <p><a href="pages/projects.html" target="_blank">by Marc Portet / Batora07</a></p>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
                     </div>
                     <!-- /.row (nested) -->
-                    <a href="#" class="btn btn-dark">View More Items</a>
+                    <a href="pages/projects.html" class="btn btn-dark" target="_blank">Voir tous les projets</a>
                 </div>
                 <!-- /.col-lg-10 -->
             </div>
