Few changes in front end

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -10,8 +10,9 @@
 	<link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
 	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
 	<link href="https://fonts.googleapis.com/css?family=Lora:400,700" rel="stylesheet">
+    <link href="../img/favicon.png" rel="icon">
 
-	<title>Travaux - Projets</title>
+	<title>Batora07 Travaux - Projets</title>
 </head>
 <body>
 
@@ -25,7 +26,7 @@
 <div class="cd-3d-portfolio">
 	<nav class="cd-3d-portfolio-navigation">
 		<div class="cd-wrapper">
-			<h1>Travaux - Projets</h1>
+			<h1>Batora07 <br> Travaux - Projets</h1>
 				
 			<ul>
 				<li><a href="#unity" class="selected">Projets Unity</a></li>
