Project page updated, links updtated

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -12,12 +12,15 @@
 	<link href="https://fonts.googleapis.com/css?family=Lora:400,700" rel="stylesheet">
     <link href="../img/favicon.png" rel="icon">
 
+    <!-- Bootstrap Core CSS -->
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
+
 	<title>Batora07 Travaux - Projets</title>
 </head>
 <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <nav role="navigation">
         <div class="container">
             <a class="navbar-brand" href="../index.html">Retour au site</a>
         </div>
@@ -42,19 +45,27 @@
 				<div class="project-wrapper">
 					<div class="project-image">
 						<div class="project-title">
-							<h2>Project 1</h2>
+							<h2>Platformer 2D</h2>
 						</div>
 					</div> <!-- .project-image -->
 
 					<div class="project-content">
 						<div>
 							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique eius ea sequi distinctio autem repellat, libero esse nam. Quam nesciunt nobis iure cupiditate neque hic magnam optio assumenda unde sequi. Rem cumque iure cum reprehenderit repellendus, autem voluptates maxime ipsa numquam libero nobis saepe laudantium amet praesentium voluptatibus, fuga eveniet.
+								<u>Type de Jeu :</u> Prototype de platformer 2D jouable à un joueur. <br/>
+								<br/>
+								<u>Moteur de Jeu :</u> Unity3D 5.5<br/>
+								<br/>
+								<u>Langage de Programmation :</u> C#<br/>
+								<br/>
+								Le but de ce prototype était de créer un template de jeu d'aventure en 2D avec un personnage pouvant sauter d'une plateforme à une autre, récupérer une quête à un PNJ et l'accomplir, valider une quête, gérer la mort et la perte de points de vie en cas de contact avec un projectile.  <br/>
+								<br/>
+								Réalisé en un week-end grâce aux assets (sons, sprite des backgrounds et du personnage) offerts par <u>Alan Thorn</u>, instructeur à <u>Udemy</u> et fondateur du studio <u>Wax Lyrical Games</u></p>
 							</p>
 
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit quod, molestiae voluptates commodi debitis saepe hic, aut magnam accusantium nostrum error ratione eum vero accusamus autem modi labore doloremque explicabo ut perspiciatis nulla molestias sequi eligendi tempore libero. Dolore iste vitae illum sequi neque quas, dolorem dolor officiis voluptatum quae voluptatibus tenetur molestias soluta blanditiis amet debitis incidunt eaque ratione facere repudiandae cupiditate aspernatur, velit ea itaque. Optio aut harum ad modi dolore doloribus tenetur laboriosam aspernatur minima itaque velit quia, illo sapiente unde, eum autem expedita facilis aliquam, dolorum dicta fuga totam sed pariatur iste! Inventore laudantium qui nostrum, perspiciatis quod! Molestias asperiores facilis explicabo necessitatibus dicta perferendis, esse, quisquam autem corporis ab doloremque nisi voluptas quidem, modi sequi aperiam, illum reiciendis delectus nostrum architecto eligendi sint deleniti voluptate! Magni quia harum eligendi laudantium fuga aspernatur veniam sunt impedit, vitae sit praesentium quam porro dolorem in eveniet iusto. Dicta tempora quo itaque minima expedita accusamus ex perferendis repellat totam! Fugit rerum nihil distinctio ducimus delectus, accusamus enim eos eum nulla fugiat aliquam blanditiis minus omnis maiores, quia numquam placeat. Molestias cupiditate deleniti porro praesentium, aliquam blanditiis maxime iste necessitatibus provident optio ipsum, beatae, libero nostrum, maiores! Temporibus, reiciendis, quibusdam.
-							</p>
+							<p> Télécharger l'executable :  <a class="btn btn-success" href="http://www.mediafire.com/file/5nxlbmnhhis9ple/Platformer2D.zip" role="button" target="_blank">Executable</a> </p>
+							<p> Télécharger les scripts :  <a class="btn btn-info" href="http://www.mediafire.com/file/e9ut8d9832u1af9/scripts.zip" role="button" target="_blank">Code Source</a> </p> 
+							<p> Télécharger le projet Unity au complet: <a class="btn btn-primary" href="http://www.mediafire.com/file/hor25rbmjg4mo5a/Platform2D.zip" role="button" target="_blank">Projet Unity</a> </p>
 						</div>
 					</div> <!-- .project-content -->
 
@@ -66,34 +77,29 @@
 				<div class="project-wrapper">
 					<div class="project-image">
 						<div class="project-title">
-							<h2>Project 2</h2>
+							<h2>Platform Switcher 3D</h2>
 						</div>
 					</div> <!-- .project-image -->
 
 					<div class="project-content">
 						<div>
 							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique eius ea sequi distinctio autem repellat, libero esse nam. Quam nesciunt nobis iure cupiditate neque hic magnam optio assumenda unde sequi. Rem cumque iure cum reprehenderit repellendus, autem voluptates maxime ipsa numquam libero nobis saepe laudantium amet praesentium voluptatibus, fuga eveniet.
+								<u>Type de Jeu :</u> Prototype de sidescroller et platformer 3D jouable à un joueur. <br/>
+								<br/>
+								<u>Moteur de Jeu :</u> Unreal Engine 4.4<br/>
+								<br/>
+								<u>Langage de Programmation :</u> C++, et quelques BluePrints<br/>
+								<br/>
+								Le but de ce prototype était de créer un template de jeu vue de profil (sidescroller), dans lequel le joueur peut se téléporter d'un plan à un autre (premier plan vers arrière plan et vice-versa) grâce à une capacité déclenchable avec la touche A du clavier. Il doit ainsi utiliser ce pouvoir de manière stratégique pour accéder à des endroits inaccessibles autrement et éviter des pièges posés sur son chemin.<br/>
+								<br/>
+
+								Réalisé en un après-midi grâce aux cours de <u>John Bura</u>, fondateur du studio <u>Mammoth Interactive</u> et instructeur sur le site <u>Udemy</u>.
 							</p>
 
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique eius ea sequi distinctio autem repellat, libero esse nam. Quam nesciunt nobis iure cupiditate neque hic magnam optio assumenda unde sequi. Rem cumque iure cum reprehenderit repellendus, autem voluptates maxime ipsa numquam libero nobis saepe laudantium amet praesentium voluptatibus, fuga eveniet.
-							</p>
+							<p> Télécharger l'executable :  <a class="btn btn-success" href="http://www.mediafire.com/file/5nxlbmnhhis9ple/Platformer2D.zip" role="button" target="_blank">Executable</a> </p>
+							<p> Télécharger les scripts :  <a class="btn btn-info" href="http://www.mediafire.com/file/e9ut8d9832u1af9/scripts.zip" role="button" target="_blank">Code Source</a> </p> 
+							<p> Télécharger le projet Unreal Engine au complet: <a class="btn btn-primary" href="http://www.mediafire.com/file/e9ut8d9832u1af9/scripts.zip" role="button" target="_blank">Projet UE 4.4</a> </p>
 
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique eius ea sequi distinctio autem repellat, libero esse nam. Quam nesciunt nobis iure cupiditate neque hic magnam optio assumenda unde sequi. Rem cumque iure cum reprehenderit repellendus, autem voluptates maxime ipsa numquam libero nobis saepe laudantium amet praesentium voluptatibus, fuga eveniet.
-							</p>
-
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique eius ea sequi distinctio autem repellat, libero esse nam. Quam nesciunt nobis iure cupiditate neque hic magnam optio assumenda unde sequi. Rem cumque iure cum reprehenderit repellendus, autem voluptates maxime ipsa numquam libero nobis saepe laudantium amet praesentium voluptatibus, fuga eveniet.
-							</p>
-
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique eius ea sequi distinctio autem repellat, libero esse nam. Quam nesciunt nobis iure cupiditate neque hic magnam optio assumenda unde sequi. Rem cumque iure cum reprehenderit repellendus, autem voluptates maxime ipsa numquam libero nobis saepe laudantium amet praesentium voluptatibus, fuga eveniet.
-							</p>
-
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique eius ea sequi distinctio autem repellat, libero esse nam. Quam nesciunt nobis iure cupiditate neque hic magnam optio assumenda unde sequi. Rem cumque iure cum reprehenderit repellendus, autem voluptates maxime ipsa numquam libero nobis saepe laudantium amet praesentium voluptatibus, fuga eveniet.
 							</p>
 						</div>
 					</div> <!-- .project-content -->
@@ -106,35 +112,56 @@
 				<div class="project-wrapper">
 					<div class="project-image">
 						<div class="project-title">
-							<h2>Project 3</h2>
+							<h2>VESPER - Court Métrage (2013)</h2>
 						</div>
 					</div> <!-- .project-image -->
 
 					<div class="project-content">
 						<div>
 							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique eius ea sequi distinctio autem repellat, libero esse nam. Quam nesciunt nobis iure cupiditate neque hic magnam optio assumenda unde sequi. Rem cumque iure cum reprehenderit repellendus, autem voluptates maxime ipsa numquam libero nobis saepe laudantium amet praesentium voluptatibus, fuga eveniet.
+								<b>VESPER</b> <br />
+								<br>
+								<iframe width="1280" height="720" src="https://www.youtube.com/embed/sc168S6Uqhs" frameborder="0" allowfullscreen></iframe>
+								<br>
+								<u>Synopsis:</u><br>
+
+								Trois gangsters aussi timbrés les uns que les autres, exécutent un flic un peu trop curieux. On distingue "Le Cerveau", il est malin, il est fourbe, on ne sait jamais où il va frapper. On trouve à ses côtés "La Gâchette", la violence fait partie de son quotidien. Et pour finir, "Le Fossoyeur", tout est dit dans le nom... La réaction des forces de l'ordre ne se fait pas attendre, une descente dans un bar pour mettre fin à ce carnage.
+								<br />
+								<br />
+								Court-métrage réalisé dans le cadre du cours de Gestion de Projet pour le DUT Métiers du Multimédia et de l'Internet, à Vichy. Diffusé au <a href="http://www.etoile-cinemas.com/palace/" target="_blank">cinéma Etoile de Vichy</a> lors du festival du Court Métrage de Vichy en 2014. 
+								Ecrit, tourné et monté sur 3 mois pendant nos temps libre.
+								<br>
+								<br>
+								</p>
+								<p><u>Réalisation :</u> Thomas Tafforeau (Acteur, Scénariste, Réalisateur, Monteur, Mixage, SFX),<br>
+									             Samuel Deschatres (Acteur, Scénariste, Réalisateur), <br>
+									             Marc Portet (Acteur, Scénariste, Réalisateur, Prise de son), <br>
+									             Lucile Garcia Bastida (Actrice, Scénariste, Réalisatrice),<br>
+									             Adrien Faure (Acteur, Réalisateur, Prise de son), <br>
+									             Arnaud Friconnet (Acteur, Réalisateur, Prise de son, Voix Off).<br>
+				            	</p>
+								<p>
+								<u>Année :</u> 2013
+								<br/>
+								<u>Durée :</u> 7m57s
+								<br/>
+								<u>Décors :</u> Environs de Vichy, bar l'Ambassadeur.
+								<br/>
+								<u>Remerciements :</u> <br>
+									Monsieur Henry Vautrin (Professeur de Gestion de Projet), <br/>
+									Romuald Carbone (Prise de son à l'Ambassadeur et figuration), <br/>
+									Romuald Carruesco (Prise de son à l'Ambassadeur et figuration),<br/>
+									Benjamin Challus (Prise de son à l'Ambassadeur et figuration), <br/>
+									Clément Riberolles (Prise de son et voiture),<br/>
+									Bar Les Ambassadeurs - Vichy,<br/>
+									Airsoft Addicts<br/>
+									IUT MMI Vichy - Pôle Universitaire Lardy, Campus Albert Londres<br/>
 							</p>
 
 							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique eius ea sequi distinctio autem repellat, libero esse nam. Quam nesciunt nobis iure cupiditate neque hic magnam optio assumenda unde sequi. Rem cumque iure cum reprehenderit repellendus, autem voluptates maxime ipsa numquam libero nobis saepe laudantium amet praesentium voluptatibus, fuga eveniet.
-							</p>
-
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique eius ea sequi distinctio autem repellat, libero esse nam. Quam nesciunt nobis iure cupiditate neque hic magnam optio assumenda unde sequi. Rem cumque iure cum reprehenderit repellendus, autem voluptates maxime ipsa numquam libero nobis saepe laudantium amet praesentium voluptatibus, fuga eveniet.
-							</p>
-
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique eius ea sequi distinctio autem repellat, libero esse nam. Quam nesciunt nobis iure cupiditate neque hic magnam optio assumenda unde sequi. Rem cumque iure cum reprehenderit repellendus, autem voluptates maxime ipsa numquam libero nobis saepe laudantium amet praesentium voluptatibus, fuga eveniet.
-							</p>
-
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique eius ea sequi distinctio autem repellat, libero esse nam. Quam nesciunt nobis iure cupiditate neque hic magnam optio assumenda unde sequi. Rem cumque iure cum reprehenderit repellendus, autem voluptates maxime ipsa numquam libero nobis saepe laudantium amet praesentium voluptatibus, fuga eveniet.
-							</p>
-
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique eius ea sequi distinctio autem repellat, libero esse nam. Quam nesciunt nobis iure cupiditate neque hic magnam optio assumenda unde sequi. Rem cumque iure cum reprehenderit repellendus, autem voluptates maxime ipsa numquam libero nobis saepe laudantium amet praesentium voluptatibus, fuga eveniet.
-							</p>
+								Bonus : 
+								<b> BETISIER</b> :<br/>
+								<iframe width="1280" height="720" src="https://www.youtube.com/embed/ZgcyykaS620" frameborder="0" allowfullscreen></iframe>
 						</div>
 					</div> <!-- .project-content -->
 
