[Update] New Resume and fixing some typos

--- a/index.html
+++ b/index.html
@@ -208,9 +208,9 @@
                                         <ul class="cd-pricing-features">
                                             <li><em>Niveau :</em> bon</li>
                                             <li><em>Projets :</em></li>
-                                            <li>Projet BTS - Site de e-commerce</li>
-                                            <li>Akuiteo - Amélioration de l'intranet</li>
-                                            <li>Ce site !</li>
+                                            <li>Prototypes de Gameplay (C#)</li>
+                                            <li>Platformer 2D</li>
+                                            <li><a href="http://globalgamejam.org/2017/games/side-tricks-pedal-train" target="_blank">Global Game Jam 2017 - Side Tricks</a></li>
                                             <li>-</li>
                                         </ul>
                                     </div> <!-- .cd-pricing-body -->
@@ -252,8 +252,8 @@
                                         <ul class="cd-pricing-features">
                                             <li><em>Niveau :</em> intermédiaire</li>
                                             <li><em>Projets :</em></li>
-                                            <li>-</li>
-                                            <li>-</li>
+                                            <li>L3 - Roborally</li>
+                                            <li>M1 - Cloth Anim 3D</li>
                                             <li>-</li>
                                             <li>-</li>
                                         </ul>
@@ -274,7 +274,7 @@
                                         <ul class="cd-pricing-features">
                                             <li><em>Niveau :</em> Intermédiaire</li>
                                             <li><em>Projets :</em></li>
-                                            <li>Projet BTS - Site de e-commerce</li>
+                                            <li>Prototypes de Gameplay (C++ & Blueprints)</li>
                                             <li>-</li>
                                             <li>-</li>
                                             <li>-</li>
@@ -323,7 +323,7 @@
                                             <li><em>Niveau :</em> bon</li>
                                             <li><em>Projets :</em></li>
                                             <li>Cave Generator- Génération Procedurale</li>
-                                            <li>CIGAC - Mailing/Publipostage</li>
+                                            <li><a href="http://globalgamejam.org/2017/games/side-tricks-pedal-train" target="_blank">Global Game Jam 2017 - Side Tricks</a></li>
                                             <li>-</li>
                                             <li>-</li>
                                         </ul>
@@ -333,14 +333,14 @@
                                 <li data-type="web" class="is-hidden">
                                     <header class="cd-pricing-header">
                                         <h2>Moteurs</h2>
-                                        <span class="cd-value">Game Maker : Studio</span>
+                                        <span class="cd-value">GameMaker</span>
                                     </header> <!-- .cd-pricing-header -->
 
                                     <div class="cd-pricing-body">
                                         <ul class="cd-pricing-features">
                                             <li><em>Niveau :</em> Débutant</li>
                                             <li><em>Projets :</em></li>
-                                            <li><em>En cours<em></li>
+                                            <li>En cours</li>
                                             <li>-</li>
                                             <li>-</li>
                                             <li>-</li>
@@ -526,7 +526,7 @@
 
                             <div class="cd-timeline-content">
                                 <h3>DUT AS Info - Orléans</h3>
-                                <p>Pendant mon DUT MMI je me suis découvert une passion dans la programmtion informatique et ai décidé poursuivre mes études dans ce domaine.</p>
+                                <p>Pendant mon DUT MMI je me suis découvert une passion dans la programmtion informatique et j'ai décidé de poursuivre mes études dans ce domaine.</p>
                                 <p>C'est pourquoi j'ai effectué une année de remise à niveau en DUT Informatique Année Spéciale, qui correspond à 2 ans de formations condensées en une.</p>
                                 <a href="https://www.univ-orleans.fr/iut-orleans/informatique/dut-ann%C3%A9e-sp%C3%A9ciale" class="cd-read-more">Site Internet du DUT AS Informatique d'Orléans.</a>
                                 <span class="cd-date">2014-2015<br/>Orléans - La Source<br/>Obtenu</span>
