project page updated

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -257,7 +257,7 @@
 								<img width="400" height="400" style="display = block; align=center; " src="img/BatoTaroSmile_less.png">
 								<br/>
 								<a href="https://www.facebook.com/BatoEtTarot/" target="_blank">Bato & Taro</a> <br/>
-								Un projet de chaîne youtube sur des chroniques à propos des Jeux Vidéos et Visual Novel, présenté sous forme de Visual Novel.
+								Un projet de chaîne youtube sur des chroniques à propos des Jeux Vidéos et Visual Novel, présentées sous forme de Visual Novel.
 								Ecriture et création des assets en cours...
 							</p>
 						</div>
