--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                                             <li><em>Niveau :</em> Intermédiaire</li>
                                             <li><em>Projets :</em></li>
                                             <li>Prototypes de Gameplay (C++ & Blueprints)</li>
-                                            <li>-</li>
+                                            <li><a href="https://github.com/Batora07/hackingGameNier" target="_blank">Mini jeu de piratage (NieR Automata)</a></li>
                                             <li>-</li>
                                             <li>-</li>
                                         </ul>
@@ -322,9 +322,9 @@
                                         <ul class="cd-pricing-features">
                                             <li><em>Niveau :</em> bon</li>
                                             <li><em>Projets :</em></li>
-                                            <li>Cave Generator- Génération Procedurale</li>
+                                            <li><a href="https://github.com/Batora07/ProceduralCaveGeneration" target="_blank">Cave Generator- Génération Procedurale</a></li>
                                             <li><a href="http://globalgamejam.org/2017/games/side-tricks-pedal-train" target="_blank">Global Game Jam 2017 - Side Tricks</a></li>
-                                            <li>-</li>
+                                            <li><a href="https://github.com/Batora07/ProceduralLandmassGeneration" target="_blank">Génération Procedurale de terrains avec bruit de Perlin (Perlin Noise)</a></li>
                                             <li>-</li>
                                         </ul>
                                     </div> <!-- .cd-pricing-body -->
