Adding new game maker project link

--- a/index.html
+++ b/index.html
@@ -338,9 +338,9 @@
 
                                     <div class="cd-pricing-body">
                                         <ul class="cd-pricing-features">
-                                            <li><em>Niveau :</em> Débutant</li>
+                                            <li><em>Niveau :</em> Intermédiaire</li>
                                             <li><em>Projets :</em></li>
-                                            <li>En cours</li>
+                                            <li><a href="https://github.com/Batora07/CaveGame2D-GM" target="_blank">Super Cave Boy</a></li>
                                             <li>-</li>
                                             <li>-</li>
                                             <li>-</li>
