--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                                             <li><em>Niveau :</em> Intermédiaire</li>
                                             <li><em>Projets :</em></li>
                                             <li><a href="https://github.com/Batora07/CaveGame2D-GM" target="_blank">Super Cave Boy</a></li>
-                                            <li>-</li>
+                                            <li><a href="https://github.com/Batora07/RPG_GM" target="_blank">Westwick, a 2D RPG game</a></li>
                                             <li>-</li>
                                             <li>-</li>
                                         </ul>
