New project added in project section

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -180,7 +180,7 @@
 					</div> <!-- .project-image -->
 
 					<div class="project-content">
-						<<div>
+						<div>
 							<p>
 								<u>Type de Jeu :</u> Runner<br/>
 								<br/>
@@ -273,14 +273,38 @@
 				<div class="project-wrapper">
 					<div class="project-image">
 						<div class="project-title">
-							<h2>Projet de jeu Puzzle 3D</h2>
+							<h2>Projets de jeux en 3D</h2>
 						</div>
 					</div> <!-- .project-image -->
 
 					<div class="project-content">
 						<div>
 							<p>
-								En cours de développement...
+								Divers projets en 3D réalisés avec Unity 5.X.
+							</p>
+
+							<p>
+								<u>Awesome Knight</u></br>
+								<u>Type de Jeu :</u> Point&Click RPG<br/>
+								<br/>
+								<u>Moteur de Jeu :</u> Unity 5.5.0<br/>
+								<br/>
+								<u>Langage de Programmation :</u> C#<br/>
+								<br/>
+								Projet réalisé lors de ma formation sur <a href="http://www.awesometuts.com" target="_blank">AwesomeTuts.com.</a><br/>
+								<br/>
+								Le but de ce prototype était de créer un template de RPG en point&click à la manière d'un jeu comme World Of Warcraft,
+								ou encore de League Of Legends. <br/>
+								<img width="800" height="600" style="display = block; align=center; " src="img/AwesomeKnight_screen1.jpg"><br/>
+								Dans ce prototype le joueur peut utiliser des compétences grâce aux touches alphanumériques du clavier
+								et du clic droit de la souris.<br/>
+								<img width="800" height="600" style="display = block; align=center; " src="img/AwesomeKnight_screen2.jpg"><br/>
+								Le projet a aussi été l'occasion pour moi de mettre en place un navmesh pour permettre à l'IA des ennemis de 
+								se déplacer.
+							</p>
+
+							<p> Awesome Knight Executable :  <a class="btn btn-success" href="http://www.mediafire.com/file/2p1zae834td83hb/Executable.zip" role="button" target="_blank">v. Executable</a> </p>
+							<p> Projet complet téléchargeable ici :  <a class="btn btn-info" href="http://www.mediafire.com/file/avl1ladglwmgxhi/AwesomeKnight.zip" role="button" target="_blank">v. Projet Unity 5.5.0</a> </p> 
 							</p>
 						</div>
 					</div> <!-- .project-content -->
