New project added in Portfolio

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -284,6 +284,7 @@
 							</p>
 
 							<p>
+							<b>### PROJET 1 ###</b></br>
 								<u>Awesome Knight</u></br>
 								<u>Type de Jeu :</u> Point&Click RPG<br/>
 								<br/>
@@ -304,7 +305,33 @@
 							</p>
 
 							<p> Awesome Knight Executable :  <a class="btn btn-success" href="http://www.mediafire.com/file/2p1zae834td83hb/Executable.zip" role="button" target="_blank">v. Executable</a> </p>
-							<p> Projet complet téléchargeable ici :  <a class="btn btn-info" href="http://www.mediafire.com/file/avl1ladglwmgxhi/AwesomeKnight.zip" role="button" target="_blank">v. Projet Unity 5.5.0</a> </p> 
+							<p> Projet complet téléchargeable ici :  <a class="btn btn-info" href="http://www.mediafire.com/file/avl1ladglwmgxhi/AwesomeKnight.zip" role="button" target="_blank">v. Projet Unity 5.5.0</a>
+							<br/>
+							 </p> 
+							
+							<p>
+							<b>### PROJET 2 ###</b></br>
+								<u>Prototype de jeu FPS multijoueurs</u></br>
+								<u>Type de Jeu :</u> FPS multijoueurs LAN/en ligne<br/>
+								<br/>
+								<u>Moteur de Jeu :</u> Unity 5.5.0<br/>
+								<br/>
+								<u>Langage de Programmation :</u> C#<br/>
+								<br/>
+								Projet réalisé lors de ma formation sur <a href="http://www.awesometuts.com" target="_blank">AwesomeTuts.com.</a><br/>
+								<br/>
+								Le but de ce prototype était de créer un jeu de tir multijoueurs en vue Première Personne en ligne,
+								à la manière de Counter Strike. <br/>
+								<img width="800" height="600" style="display = block; align=center; " src="img/FPSMultiProto_screen1.jpg"><br/>
+								Dans ce prototype le joueur (Client) peut se connecter en LAN à un autre joueur (Host/Serveur) ou bien rejoindre un salon créé par un autre joueur en ligne.<br/>
+								Le joueur peut également changer d'armes, faire des impacts sur les murs et blesser son adversaire (morts et game over pas encore implémentés).</br>
+								<img width="800" height="600" style="display = block; align=center; " src="img/FPSMultiProto_screen2.jpg"><br/>
+								Le projet a été l'occasion pour moi de découvrir les bases de l'utilisation du NetworkManager et de la manière dont est créé un jeu en ligne grâce à Unity, ainsi que de gérer différentes caméras selon les points de vues des joueurs.
+							</p>
+
+
+							<p> FPSMultiProto Executable :  <a class="btn btn-success" href="https://www.mediafire.com/file/35130c6euuy75jq/FPSMultiProtoExe.zip" role="button" target="_blank">v. Executable</a> </p>
+							<p> Projet complet téléchargeable ici :  <a class="btn btn-info" href="http://www.mediafire.com/file/tl85l8ct1bfi1t8/FPSMultiplayerProto.zip" role="button" target="_blank">v. Projet Unity 5.5.0</a> </p> 
 							</p>
 						</div>
 					</div> <!-- .project-content -->
