--- a/index.html
+++ b/index.html
@@ -447,29 +447,21 @@
 
 				 <section class="cd-container">
                         <!-- Intégration PULPSOFT -->
-                        <div class="cd-timeline-block">
+                       <div class="cd-timeline-block">
                             <div class="cd-timeline-img cd-picture">
-                                <img src="img/Pencil.png" alt="Meteor">
+                                <img src="img/GPS.png" alt="GPS">
                             </div> <!-- cd-timeline-img -->
 
                             <div class="cd-timeline-content">
                                 <h3>Pulpsoft</h3>
                                 <p>Développeur Unity</p>
-								<p>(C#, gameplay et UI) à Pulpsoft - (https://www.pulpsoft.fr) :</p>
-								<p>Gameplay / UI sur des projets de serious games :</p>
-                                <p>  - Guild'Up : Google play link (<a href="https://bit.ly/2Fp7z0c" target="_blank" class="cd-read-more">) / App store link (<a href="https://apple.co/2M5Vcqz" target="_blank" class="cd-read-more">)</p>
-								<p></p>
-								<p>A aidé à la programmation + UI de projets de "configurateurs" :</p>
-								<p>		- Ocewood : Google play link (<a href="https://bit.ly/2THwQWI" target="_blank" class="cd-read-more">) / App store link (<a href="https://apple.co/2QIud5f" target="_blank" class="cd-read-more">)</p>
-								<p>		- Meubles Celio : Google Play link (<a href="https://bit.ly/2QGjZSS" target="_blank" class="cd-read-more">) / App store link (<a href="https://apple.co/2Fo8DkZ" target="_blank" class="cd-read-more">)</p>
-								<p>		- André Renault / Hilding Anders : Google Play link (<a href="https://bit.ly/2FvOGIx" target="_blank" class="cd-read-more">) / App store link (<a href="https://apple.co/2D6qRW5" target="_blank" class="cd-read-more">)</p>
-                                <a href="https://www.pulpsoft.fr" target="_blank" class="cd-read-more">Site Internet de Pulpsoft</a>
+								<p>Gameplay / UI sur des projets de serious games + projets de "configurateurs" 3D :</p>
+                                <p>  - Guild'Up : <a href="https://bit.ly/2Fp7z0c" target="_blank">Google play link</a> / <a href="https://apple.co/2M5Vcqz" target="_blank">App store link</a></p>
+								<a href="https://www.pulpsoft.fr" target="_blank" class="cd-read-more">Site Internet de Pulpsoft</a>
                                 <span class="cd-date">Octobre 2017 - Décembre 2018<br/>Cholet</span>
                             </div> <!-- cd-timeline-content -->
                         </div> <!-- cd-timeline-block -->
 
-
-                    <section class="cd-container">
                         <!-- Intégration M1-S2 -->
                         <div class="cd-timeline-block">
                             <div class="cd-timeline-img cd-picture">
