Fix link guild up playstore

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                                 <h3>Pulpsoft</h3>
                                 <p>Développeur Unity</p>
 								<p>Gameplay / UI sur des projets de serious games + projets de "configurateurs" 3D :</p>
-                                <p>  - Guild'Up : <a href="https://bit.ly/2Fp7z0c" target="_blank">Google play link</a> / <a href="https://apple.co/2M5Vcqz" target="_blank">App store link</a></p>
+                                <p>  - Guild'Up : <a href="https://bit.ly/2Tda35b" target="_blank">Google play link</a> / <a href="https://apple.co/2M5Vcqz" target="_blank">App store link</a></p>
 								<a href="https://www.pulpsoft.fr" target="_blank" class="cd-read-more">Site Internet de Pulpsoft</a>
                                 <span class="cd-date">Octobre 2017 - Décembre 2018<br/>Cholet</span>
                             </div> <!-- cd-timeline-content -->
